--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: lisp
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 script: ./scripts/run-travis.sh
